--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="buttons">
                 <a href="https://github.com/510208/yunyubot-dc-annou/releases/latest/">立即下載！ <i class="bi bi-arrow-down"></i></a>
                 <a href="https://github.com/510208/yunyubot-dc-annou/"><i class="bi bi-github"></i></a>
-                <a href="/docs/"><i class="bi bi-book"></i></a>
+                <a href="./docs/"><i class="bi bi-book"></i></a>
             </div>
         </div>
         <div class="blank"></div>
